--- a/scss/_gdrp.scss
+++ b/scss/_gdrp.scss
@@ -31,11 +31,6 @@
             }    
         }
 
-        a {
-            color: $color-white;
-            text-decoration: underline!important;
-        }
-
         @include tablet-and-up {
             padding: 32px 64px;
         }
@@ -77,7 +72,7 @@
 
     &__cta {
         background-color: $color-blue-50;
-        text-decoration: none;
+        text-decoration: none!important;
         color: $color-white;
         font-size: remCalc(14);
         line-height: 22px;
